fix call to action button z-index

--- a/src/styles/_elements.scss
+++ b/src/styles/_elements.scss
@@ -15,6 +15,6 @@ main {
     bottom: 48px;
     right: 48px;
     margin: 0;
-    z-index: 2;
+    z-index: 2 !important;
   }
 }
